--- a/templates/css/master.css
+++ b/templates/css/master.css
@@ -21,7 +21,7 @@ body {
 	font-family: Helvetica, Arial, Verdana, sans-serif;
 	font-size: 62.5%;
 /*	background: transparent url(../images/grid-1080.gif) repeat-y top center;*/
-	background: transparent url(../images/grid-960.gif) repeat-y top center;
+/*	background: transparent url(../images/grid-960.gif) repeat-y top center;*/
 	background-color: #fff;
 	color: #333;
 }
@@ -336,6 +336,26 @@ label {
 .story-title h4 {
 	margin: 0;
 	line-height: 1.3;
+	float: left;
+}
+
+.story-title ul {
+	margin: 0;
+	list-style-type: none;
+	float: right;
+}
+
+.story-title li {
+	margin: 0;
+}
+
+.story-title li p {
+	font-size: 1.1em;
+	line-height: 1.4;
+}
+
+.story-details {
+	clear: both;
 }
 
 .story-details ul {
@@ -344,7 +364,8 @@ label {
 }
 
 .story-details li {
-	margin: 0;
+	margin: 0 1em 0 0;
+	float: left;
 }
 
 .story-details li p {
@@ -357,11 +378,7 @@ label {
 	color: #2C7FA2;
 }
 
-.story-details li.add-tags-button a {
-	color: #999;
-}
-
-.story-details li.add-tags-button a:hover {
+.story-details li a:hover {
 	text-decoration: underline;
 }
 
@@ -373,10 +390,26 @@ label {
 	width: 70%;
 }
 
+.drag-button {
+	display: block;
+	width: 16px;
+	height: 16px;
+	text-indent: -1000em;	
+	background: transparent url(../images/61.png) no-repeat top left;
+}
+
+.story-edit-button {
+	display: block;
+	width: 16px;
+	height: 16px;
+	text-indent: -1000em;
+	background: transparent url(../images/60.png) no-repeat top left;
+}
+
 /*Forms*/
 
 .field {
-/*	padding: 1em;*/
+	padding: 1em;
 	border-bottom: 1px solid #ddd;
 	clear: both;
 	overflow: hidden;
@@ -436,13 +469,6 @@ p.submit a:hover {
 input.submit {
 	width: auto !important;
 	background: none !important;
-}
-
-.new-story {
-/*	padding: 1em;*/
-/*	border: 1px solid #ddd;*/
-/*	-moz-border-radius: 15px;*/
-/*	overflow: hidden;*/
 }
 
 .new-story input {
@@ -588,10 +614,6 @@ dl.person a:hover {
 
 .z {
 	background: #FBFBFB;
-}
-
-.quick-edit {
-	color: #999 !important;
 }
 
 .quick-edit:hover {
