--- a/templates/ui.html
+++ b/templates/ui.html
@@ -198,22 +198,26 @@
 			
 			<p>Stories are build using a series of <code>DIV</code>s and <code>UL</code>s.</p>
 			
-			<div class="story">
+			<div class="story" style="width: 50%">
 				<div class="story-meta">
 					<ul>
 						<li class="priority"><a href="">3</a></li>
-						<li><a href="">Accept</a></li>
 					</ul>
 				</div>
 				
 				<div class="story-description">
 					<div class="story-title">
 						<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
+						
+						<ul>
+							<li><p><a href="" class="drag-button" title="Drag this story">Click to drag</a></p></li>
+						</ul>
 					</div>
 					
 					<div class="story-details">
 						<ul>
-							<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
+							<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a></p></li>
+							<li><p><a href="" class="story-edit-button" title="Edit this story">Edit</a></p></li>
 						</ul>
 					</div>
 				</div>
@@ -292,7 +296,7 @@
 			<div class="new-story">
 				<form action="ui_submit" method="get" accept-charset="utf-8">
 					<div class="field">
-						<div class="col span-4">
+						<div class="col span-6">
 							<input type="text" name="some_name" value="" id="some_name" />
 							<p class="tooltip">Example: "Redesign login form @lebowsky #inteface #design". <a href="">More help</a>.</p>
 						</div>
